# satellite-orbit-sim

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md
docs/: placeholder.txt
shaders/: earth.frag  earth.hlsl  earth.vert  satellite.frag  satellite.hlsl  satellite.vert
src/: application.cpp  application.h  main.cpp
src/orbit/: orbital_mechanics.cpp  orbital_mechanics.h
src/ui/: imgui_manager.cpp  imgui_manager.h
src/vulkan/: instance.cpp  instance.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h
